@@ -1,0 +1,15 @@
+ 0 1
+ 0 1 2 3
+ 0 1 2 3 4 5
+ 0 1 2
+ 0 1
+ 0 1
+ 0 1 2 3
+ 0 9 8 7 6 5
+ 0 1 2
+ 0 1
+ 0 1
+ 0 3
+ 0 1 5
+ 0 1 2
+ 0 1
