@@ -57,6 +57,12 @@ AT_KEYWORDS([igraph_shortest_paths_bellman_ford Bellman-Ford shortest paths geod
 AT_COMPILE_CHECK([simple/bellman_ford.c], [simple/bellman_ford.out])
 AT_CLEANUP
 
+AT_SETUP([Get the weighted shortest paths (Dijkstra): ])
+AT_KEYWORDS([igraph_get_shortest_paths_dijkstra Dijkstra shortest paths geodesic])
+AT_COMPILE_CHECK([simple/igraph_get_shortest_paths_dijkstra.c],
+         [simple/igraph_get_shortest_paths_dijkstra.out])
+AT_CLEANUP
+
 AT_SETUP([Edge betweenness (igraph_edge_betweenness): ])
 AT_KEYWORDS([igraph_edge_betweenness betwenness])
 AT_COMPILE_CHECK([simple/igraph_edge_betweenness.c], 
