@@ -1,3 +1,14 @@
+2008-06-02  Tamas Nepusz  <ntamas@rmki.kfki.hu>
+
+	* src/igraph.h (igraph_get_shortest_paths_dijkstra) :
+	added header
+	
+	* src/structural_properties.c (igraph_get_shortest_paths_dijkstra) :
+	added
+	
+	* examples/simple/igraph_get_shortest_paths_dijkstra.{c,out} :
+	added
+	
 2008-05-28  Tamas Nepusz  <ntamas@rmki.kfki.hu>
 
 	* src/igraph.h (igraph_shortest_paths_bellman_ford) :
